@@ -4,7 +4,7 @@ use ExtUtils::MakeMaker;
 WriteMakefile
   (
    'NAME'	   => 'Puppet-VcsTools-History',
-   'VERSION' => '1.001',
+   'VERSION' => '1.002',
    'EXE_FILES' => ['viewHistory'],
    'dist' => {COMPRESS=>'gzip -9f', SUFFIX => 'gz'},
    ($] >= 5.005 ?
@@ -15,11 +15,11 @@ WriteMakefile
     'Tk' => 0,
     'Tk::Multi::Manager' => '2.001',
     'Tk::Multi::Text' => '2.001',
-    'Data::Dumper'=> 0,
     'Puppet::Show' => '0.04',
+    'Sort::Versions' => 0,
     'MLDBM' => 0,
     'DB_File' =>0,
-    'VcsTools::Version' => 0,
-    'VcsTools::History' => 0
+    'VcsTools::Version' => '1.004',
+    'VcsTools::History' => '1.004'
    }
   );
