@@ -1,3 +1,14 @@
+1999-07-23  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.002
+
+	* lib/Puppet/VcsTools/History.pm (new): 
+	- added show logs command on node
+
+	* lib/Puppet/VcsTools/Version.pm (new): fix pb Storage and name
+
+	* lib/Puppet/VcsTools/GraphWidget.pm: 
+	- put versions in canonical order on the right listbox
+
+
 v1.001: 
 	- original version
 
